<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_sort_priority"
        android:title="@string/sort_by_priority"
        android:icon="@drawable/ic_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_time"
        android:title="@string/sort_by_time"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>
